# chip8-emulator

./: CMakeLists.txt  Readme.md
include/: chip8.hpp  emulator.hpp
src/: chip8.cpp  emulator.cpp  main.cpp
